Fixed buttons on dark backgrounds from getting the wrong font color

--- a/app/assets/stylesheets/textures.scss
+++ b/app/assets/stylesheets/textures.scss
@@ -20,15 +20,15 @@
   // Fallback background color
   background-color: #333;
   color: #FFF;
-  a {
+  a:not(.btn) {
     color: #4cae4c;
   }
-  a:hover,
-  a:focus,
-  a:active,
-  a.active,
-  a.disabled,
-  a[disabled] {
+  a:not(.btn):hover,
+  a:not(.btn):focus,
+  a:not(.btn):active,
+  a:not(.btn).active,
+  a:not(.btn).disabled,
+  a:not(.btn)[disabled] {
     color: rgb(255, 157, 107);
   }
 }
